# ball_sort

./: .clang-format  .clang-tidy  .clangd.yaml  .cmake-format.yaml  .coderabbit.yaml  .gitignore  .yamllint.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  bin  conanfile.py  package.json  pnpm-lock.yaml  scripts.sh
.github/workflows/: ci.yml
app/: CMakeLists.txt  app.cpp
ball_sort/: CMakeLists.txt
ball_sort/ball_sort/: illegal_move_exception.hpp  illegal_puzzle_exception.hpp  main.cpp  move.hpp  move.test.cpp  puzzle.hpp  solver.cpp  solver.hpp  timer.cpp  timer.hpp  tube.cpp  tube.hpp
ball_sort/ball_sort/puzzle/: puzzle.cpp  puzzle.test.cpp  puzzle_do_move.cpp  puzzle_do_move.test.cpp  puzzle_exceptions.test.cpp  puzzle_generate_legal_moves.cpp  puzzle_is_legal_move.cpp  puzzle_make_tubes.cpp  puzzle_undo_move.cpp  puzzle_validate_puzzle.cpp
ball_sort/ball_sort/tube/: tube.cpp  tube_booleans.test.cpp  tube_exceptions.test.cpp
ball_sort/tests/: test_solver.cpp
ball_sort/tests/puzzle/: test_puzzle.cpp
ball_sort/tests/tube/: test_tube.cpp
cmake/: CPM.cmake  Print.cmake  Sanitisers.cmake  Warnings.cmake  add_subdirectories.cmake  add_test_targets.cmake  find_sources.cmake  make_names.cmake  target_add_sanitisers.cmake  target_set_flags.cmake  target_set_warnings.cmake
include/ball_sort/: move.hpp  puzzle.hpp  solver.hpp  timer.hpp  tube.hpp
include/ball_sort/exceptions/: illegal_move_exception.hpp  illegal_puzzle_exception.hpp  not_enough_balls_exception.hpp  too_many_balls_exception.hpp
scripts/: README.md  build.sh  debug.sh  release.sh  safe.sh  test.sh
scripts/macos_linux/: debug.sh  debug_test.sh  release_test.sh
scripts/windows/: debug.bat  debug_test.bat  debug_test.ps1  release.bat  release_test.bat
src/: move.cpp  puzzle.cpp  tube.cpp
src/ball_sort/: move.cpp  puzzle.cpp  solver.cpp  timer.cpp  tube.cpp
src/ball_sort/puzzle/: puzzle.cpp  puzzle_do_move.cpp  puzzle_generate_legal_moves.cpp  puzzle_get_ball_tally.cpp  puzzle_is_legal_move.cpp  puzzle_make_tubes.cpp  puzzle_undo_move.cpp  puzzle_validate_puzzle.cpp
tests/: CMakeLists.txt  test_move.cpp  test_puzzle.cpp  test_solver.cpp  test_timer.cpp  test_tube.cpp
tests/puzzle/: test_puzzle.cpp  test_puzzle_do_move.cpp
tests/tube/: test_tube.cpp  test_tube_booleans.cpp  test_tube_exceptions.cpp  test_tube_is_one_colour.cpp
